# rag_demo

./: .gitignore  pyproject.toml  readme.MD
frontend/: README.md  package-lock.json  package.json  quasar.config.js
frontend/src/boot/: axios.js
frontend/src/components/: HpBarChart.vue  HpLineChart.vue  HpMetricCard.vue
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CodegenPage.vue  HorsePredictionsPage.vue  IndexPage.vue
frontend/src/router/: routes.js
src/: filepaths_template.py  log_template.py  rag_demo_main.py
src/rag_demo/: rd_codegen.py  rd_codegen_prompts.py  rd_document_ingestion.py  rd_fastapi.py  rd_filepaths.py  rd_logging.py  rd_main.py  rd_rag.py  rd_streamlit.py
src/rag_demo/routes/: rd_horses.py
