[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.43.0",
    "streamlit>=1.56.0",
    "sentence_transformers>=5.3.0",
    "torchvision",
    "torch",
    "fastapi",
    "uvicorn",
    "pdfplumber",
    "pandas>=2.2",
    "horse_predictions",
]
